Anims working together with API calls (APIAcressNew imported)

--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,5 @@ Assets/Scripts/APIAccess.cs
 Assets/Scripts/APIAccess.cs.meta
 pAInt_r/Assets/Scripts/VsScripts/APIAccess.cs
 pAInt_r/Assets/Scripts/VsScripts/APIAccess.cs.meta
+pAInt_r/Assets/Scripts/VsScripts/APIAccessNew.cs
+pAInt_r/Assets/Scripts/VsScripts/APIAccessNew.cs.meta
