--- a/pAInt_r/Assets/Wwise/LauncherInfo.json
+++ b/pAInt_r/Assets/Wwise/LauncherInfo.json
@@ -1,5 +1,5 @@
 {
-    "originalSdkFolder": "C:\\Program Files (x86)\\Audiokinetic\\Wwise2023.1.4.8496\\SDK",
+    "originalSdkFolder": "C:\\Wwise\\SDK",
     "currentVersion": {
         "nickname": "",
         "build": 3091,
@@ -15,6 +15,18 @@
         {
             "id": "Packages",
             "valueId": "Extensions"
+        },
+        {
+            "id": "DeploymentPlatforms",
+            "valueId": "Mac"
+        },
+        {
+            "id": "DeploymentPlatforms",
+            "valueId": "Windows"
+        },
+        {
+            "id": "Packages",
+            "valueId": "Unity"
         },
         {
             "id": "DeploymentPlatforms",
